--- a/taichungfood.html
+++ b/taichungfood.html
@@ -25,6 +25,9 @@
 				        <a class="dropdown-item" href="taipeifood.html">台北</a>
               </div>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="tachung.html">台中歷史</a>
+            </li>
             </li>
           </ul>
 		  <form class="d-flex">
