--- a/taipeifood.html
+++ b/taipeifood.html
@@ -24,7 +24,10 @@
                 <a class="dropdown-item" href="tainanfood.html">台南</a>
 				<a class="dropdown-item" href="taipeifood.html">台北</a>
               </div>
-            </li>	
+            </li>
+			<li class="nav-item dropdown">
+				<a class="nav-link" href="tachung.html">台中歷史</a>
+			</li>	
             </li>
           </ul>
 		  <form class="d-flex">
